<resources>
    <string name="app_name">Weather Report</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="initial_setup">Initial Setup</string>
    <string name="location_settings">Location Settings</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="notifications">Notifications</string>
    <string name="confirm">Confirm</string>
    <string name="sunset">Sunset</string>
    <string name="clouds">Clouds</string>
    <string name="sunrise">Sunrise</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="search_by_city">Search by city</string>
    <string name="proceed">Proceed</string>
    <string name="location_options">Location Options</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="unit_system">Unit System</string>
    <string name="si">SI</string>
    <string name="imperial">Imperial</string>
    <string name="custom">Custom</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="celsius">C</string>
    <string name="fahrenheit">F</string>
    <string name="kelvin">K</string>
    <string name="speed_unit">Speed Unit</string>
    <string name="m_s">m/s</string>
    <string name="mph">mph</string>
    <string name="km_h">km/h</string>
    <string name="ft_s">ft/s</string>
    <string name="pressure_unit">Pressure Unit</string>
    <string name="hpa">hPa</string>
    <string name="atm">atm</string>
    <string name="bar">Bar</string>
    <string name="psi">Psi</string>
    <string name="arise">ARISE!</string>
    <string name="dismiss">Dismiss</string>
    <string name="home">Home</string>
    <string name="alerts">Alerts</string>
    <string name="favourite_locations">Favourite Locations</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="feels_like">Feels Like</string>
    <string name="condition_thunderstorm">Thunderstorm</string>
    <string name="condition_drizzle">Drizzle</string>
    <string name="condition_rain">Rain</string>
    <string name="condition_snow">Snow</string>
    <string name="condition_mist">Mist</string>
    <string name="condition_smoke">Smoke</string>
    <string name="condition_haze">Haze</string>
    <string name="condition_dust">Dust</string>
    <string name="condition_fog">Fog</string>
    <string name="condition_sand">Sand</string>
    <string name="condition_ash">Ash</string>
    <string name="condition_squall">Squall</string>
    <string name="condition_tornado">Tornado</string>
    <string name="condition_clear">Clear</string>
    <string name="condition_clouds">Clouds</string>
    <string name="unknown">Unknown</string>
</resources>